src/objects/Price_Plan_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Default_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Friendly_Name__c</fullName>
        <label>Offer Friendly Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Plan__c</fullName>
        <label>Price Plan</label>
        <referenceTo>Price_Plan__c</referenceTo>
        <relationshipLabel>Price Plan Offers</relationshipLabel>
        <relationshipName>Price_Plan_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Price Plan Offer</label>
    <nameField>
        <displayFormat>PPO-{0000000000}</displayFormat>
        <label>Price Plan Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Plan Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>